--- a/slides/chapter-2-generalization.Rmd
+++ b/slides/chapter-2-generalization.Rmd
@@ -306,8 +306,6 @@ class:center,middle,inverse
 ---
 ## Review - Section 2.1
 
-- Changing from proportion/probability to averages of quantitative data
-
 - **population** - entire collection of observational units
 
 - **sample** - subset of data
@@ -345,6 +343,20 @@ class:center,middle,inverse
 
   - How might we select a SRS of everyone in the entire state?
   
+
+## Exploration 2.1
+
+Answer Question 10 here: https://forms.gle/8vCzyVAxLGLx84hH6
+
+---
+## Exploration 2.1
+
+Answer Question 17 here: https://forms.gle/UxaVigrMn1gpVpaD7
+
+Turn in answers to 10-19 on Canvas by Monday at 6pm. I will post the graphs shown in class on Canvas.
+
+---
+
 ---
 ## Review
 ### New Symbols
@@ -370,18 +382,8 @@ class:center,middle,inverse
 - Population standard deviation: $\sigma$
 
 ---
-## Exploration 2.1
 
-Answer Question 10 here: https://forms.gle/8vCzyVAxLGLx84hH6
 
----
-## Exploration 2.1
-
-Answer Question 17 here: https://forms.gle/UxaVigrMn1gpVpaD7
-
-Turn in answers to 10-19 on Canvas by Monday at 6pm. I will post the graphs shown in class on Canvas.
-
----
 class:center,middle,inverse
 # 2.2: Inference on a Single Quantitative Variable
 
@@ -394,31 +396,24 @@ Inference:
 - Standardized Statistics / p-values
 - Theory based approximations
 
-Now, we're going to shift to **quantitative** variables
+Now, we're going to shift to **quantitative** variables with the hopes of learning about the **population mean**
 
-2.1 covered sampling methods and vocabulary, symbols, and  drawing conclusions about **population means**
 
 ---
 ## Testing with means
 
-Parameter of interest is now in terms of **quantitative** data 
+Parameter of interest is now **quantitative**
   - number of emails in a day
   - amount of money spent Christmas shopping
-  - population size
+  - temperature
 
-Hypotheses set up in the same way (new symbols):     
+Null and Alternative Hypotheses:
+<br/><br/>
 $H_0: \mu = a$    
 $H_A: \mu > a \text{, or } H_A: \mu < a \text{, or } H_A: \mu \neq a$
 
-Tests have the same interpretation and conclusions from p-values and standardized statistics
+Tests have the same interpretation and conclusions using p-values and standardized statistics
 
----
-## Describing Distributions
-
-Quantitative variables can be distributed in more interesting ways...
-
-### Shape
-![Positive Skew, Symmetric, and Negative Skew Distributions](https://upload.wikimedia.org/wikipedia/commons/c/cc/Relationship_between_mean_and_median_under_different_skewness.png)
 ---
 ## Describing Distributions
 
@@ -432,6 +427,16 @@ tbl <- tibble(x = runif(100, 0, 10), y = rbernoulli(100, .6), z = ifelse(y, roun
 ggplot(tbl, aes(x = z)) + geom_histogram(binwidth = .25) + scale_x_continuous("", breaks = 0:10) + 
   scale_y_continuous("# samples") + theme(axis.title.x = element_blank())
 ```
+
+
+---
+## Describing Distributions
+
+Quantitative variables can be distributed in more interesting ways...
+
+### Shape
+![Positive Skew, Symmetric, and Negative Skew Distributions](https://upload.wikimedia.org/wikipedia/commons/c/cc/Relationship_between_mean_and_median_under_different_skewness.png)
+
 ---
 ## Describing Distributions
 ### Center
@@ -474,6 +479,8 @@ ggplot(data = tbl, aes(x = x)) + facet_wrap(~set, scales = "free") + geom_histog
 
 - A summary statistic is called **resistant** if its value does not change much when extreme observations are removed from the data set
 
+- The median is a resistant summary statistic
+
 ---
 ## Describing Distributions
 ## Example
@@ -491,54 +498,65 @@ df %>%
   scale_x_continuous("Number of US states visited")
 ```
 
-Describe the distribution
+This distribution is skewed right
 
 Median is .underline[.hidden[`r median(df$n_states)`]]
 
 What if 43 is a typo and it should be 34?
 
 ---
-## Quantitative Data
+## Inference of Quantitative Data
 
-- Categorical data
-  - Simulations with spinners, coins, etc.
-  - Create a null distribution
-  - Evaluate how our sample relates to the null distribution
+- Simulations
+  - Get many samples of the same sample size from the population
+  - Create a null distribution using the average of each simulated sample
   
-- Where was the null centered? How did sample size affect the null distribution?
+- Find p-value by evaluating how our sample statistic relates to the null distribution
+  
+- Null distribution is centered at the value of the population mean according to the null hypothesis
 
-- Quantitative data can't be modeled with coin flips, but the same principles apply
+- Review how the sample size affected the null distribution
+
+- Simulations are difficult
+
 
 ---
-## New values
+## Theory-Based Inference for Quantitative Data
 - The principles from categorical data carry over to quantitative data
 
 - Using theory-based methods, the standard deviation of the sample mean is calculated to be 
 $$s = \frac{\sum_{i=1}^n{(x_i-\overline x)^2}}{n-1}$$
 
 
-What do you remember about $\sigma$?
+Remember, $\sigma$ is the standard deviation of the population
 
-Is it a parameter or a statistic?
+$\sigma$ is a parameter
+
+
 
 ---
-## New values
+## Standardized Statistic
 
-We don't  have to have $\sigma$ - we can use $s$, the sample standard deviation, in its place
+Remember, the general template is
 
-In order to find thet standardized statistic, we use  $\displaystyle \frac{s}{\sqrt{n}}$ in place of $\sigma$
+$\displaystyle z = \frac{statistic - parameter_{H_0}}{\sigma}$
+
+Oftentimes, we don't know $\sigma$, which is fine because we can rely on $s$
+
+We can use the standard error in place of $\sigma$
 
 $\displaystyle \frac{s}{\sqrt{n}}$ is the **standard error** of the sample mean
 
 The **standard error** is a measure of the accuracy of an estimate
 
+$\displaystyle t = \frac{\overline{x} - \mu_{0}}{\frac{s}{\sqrt{n}}}$
 
 ---
-## T-statistics and Z-statistics
-- As with the normal approximation, we need a reference distribution
-  - Categorical data: $z$ and compare to a normal distribution
+## T-statistics vs. Z-statistics
+- As with normal approximation, we need a reference distribution
+  - Categorical data: find $z$ and compare to a normal distribution
   - Quantitative: use $s$ in place of $\sigma$ -> we can't compare to a normal distribution    
-  Instead, we use the $t$ distribution, which is very similar but not quite the same
+  Instead, we use the $t$ distribution, which is very similar
   
 ```{r}
 tibble(x = seq(-4, 4, .01), z = dnorm(x), t = dt(x, df = 5)) %>%
